Added AccounterApplication.Common project, changed appsettings.json

--- a/AccounterApplication.Data/AccounterApplication.Data.csproj
+++ b/AccounterApplication.Data/AccounterApplication.Data.csproj
@@ -13,4 +13,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AccounterApplication.Common\AccounterApplication.Common.csproj" />
+  </ItemGroup>
+
 </Project>
