--- a/AccounterApplication.Web/appsettings.json
+++ b/AccounterApplication.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AccounterApplication.Web-27ABFA77-15A1-4CEF-BD9F-1BEAFBB97138;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=AccounterApplication;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
