--- a/AccounterApplication.Data/AccounterApplication.Data.csproj
+++ b/AccounterApplication.Data/AccounterApplication.Data.csproj
@@ -5,16 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200223160222_Expenses.cs" />
+    <Compile Remove="Migrations\20200223160222_Expenses.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\AccounterApplication.Common\AccounterApplication.Common.csproj" />
+    <ProjectReference Include="..\AccounterApplication.Data.Common\AccounterApplication.Data.Common.csproj" />
   </ItemGroup>
 
 </Project>
