--- a/AccounterApplication.Services/AccounterApplication.Services.csproj
+++ b/AccounterApplication.Services/AccounterApplication.Services.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <ProjectReference Include="..\AccounterApplication.Data\AccounterApplication.Data.csproj" />
   </ItemGroup>
 
 </Project>
