Added ApplicationRole, DbQueryRunner, EntityIndexesConfiguration

--- a/AccounterApplication.Web/AccounterApplication.Web.csproj
+++ b/AccounterApplication.Web/AccounterApplication.Web.csproj
@@ -26,4 +26,9 @@
     <ProjectReference Include="..\AccounterApplication.Web.ViewModels\AccounterApplication.Web.ViewModels.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Views\Expenses\" />
+  </ItemGroup>
+
 </Project>
