--- a/AccounterApplication.Services/AccounterApplication.Services.csproj
+++ b/AccounterApplication.Services/AccounterApplication.Services.csproj
@@ -10,11 +10,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Expenses\" />
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
