--- a/AccounterApplication.Web.ViewModels/AccounterApplication.Web.ViewModels.csproj
+++ b/AccounterApplication.Web.ViewModels/AccounterApplication.Web.ViewModels.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AccounterApplication.Data\AccounterApplication.Data.csproj" />
     <ProjectReference Include="..\AccounterApplication.Services.Mapping\AccounterApplication.Services.Mapping.csproj" />
   </ItemGroup>
