--- a/AccounterApplication.Web.Controllers/AccounterApplication.Web.Controllers.csproj
+++ b/AccounterApplication.Web.Controllers/AccounterApplication.Web.Controllers.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>AccounterApplication.Web.Controllers</AssemblyName>
   </PropertyGroup>
   
   <ItemGroup>
