--- a/AccounterApplication.Web.ViewModels/AccounterApplication.Web.ViewModels.csproj
+++ b/AccounterApplication.Web.ViewModels/AccounterApplication.Web.ViewModels.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AccounterApplication.Common\AccounterApplication.Common.csproj" />
     <ProjectReference Include="..\AccounterApplication.Data\AccounterApplication.Data.csproj" />
     <ProjectReference Include="..\AccounterApplication.Services.Mapping\AccounterApplication.Services.Mapping.csproj" />
   </ItemGroup>
