--- a/AccounterApplication.Common/AccounterApplication.Common.csproj
+++ b/AccounterApplication.Common/AccounterApplication.Common.csproj
@@ -29,6 +29,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>MessagesResources.resx</DependentUpon>
     </Compile>
+    <Compile Update="LocalizationResources\ViewModels\ComponentInputModelResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ComponentInputModelResources.resx</DependentUpon>
+    </Compile>
     <Compile Update="LocalizationResources\ViewModels\ExpenseInputModelResources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -48,6 +53,11 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>MonthlyIncomeInputModelResources.resx</DependentUpon>
+    </Compile>
+    <Compile Update="LocalizationResources\Views\Components\ComponentsViewsResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ComponentsViewsResources.resx</DependentUpon>
     </Compile>
     <Compile Update="LocalizationResources\Views\Expenses\ExpensesViewsResources.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -98,6 +108,10 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>MessagesResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="LocalizationResources\ViewModels\ComponentInputModelResources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ComponentInputModelResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="LocalizationResources\ViewModels\ExpenseInputModelResources.en.resx">
       <Generator></Generator>
     </EmbeddedResource>
@@ -116,6 +130,10 @@
     <EmbeddedResource Update="LocalizationResources\ViewModels\MonthlyIncomeInputModelResources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>MonthlyIncomeInputModelResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="LocalizationResources\Views\Components\ComponentsViewsResources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ComponentsViewsResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="LocalizationResources\Views\Expenses\ExpensesViewsResources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
